# tuncel

./: .directory  ChangeLog  ChangeLog.md  Makefile.am  README.md  aclocal.m4  configure.ac  desktop_translations.sh  tuncel.conf.in  tuncel.in  tuncel.spec
.tx/: config  config~
actions/: Makefile.am  tuncel-forceinstalltest.desktop  tuncel-installsrc.desktop  tuncel-maininfo.desktop  tuncel-openHomepage.desktop  tuncel-showcontents.desktop  tuncel-testinstall.desktop  tuncel-unpack.desktop  tuncel-unpackto.desktop
actions/po/: de.po  el.po  es.po  fr.po  it.po  pl.po  pt_PT.po  ro.po  ru.po  sl.po  tr.po  tuncel_actions_desktop.pot  uk.po
kde/: Makefile.am  tuncel_kde3.desktop  tuncel_kde4.desktop  tuncel_trinity.desktop
kde/po/: de.po  el.po  es.po  fr.po  it.po  pl.po  pt_PT.po  ro.po  ru.po  sl.po  tr.po  tuncel_kde_desktop.pot  uk.po
kde3/: Makefile.am  tuncel.desktop
kde4/: Makefile.am  tuncel.desktop
maintainers/: configure.ac.in  desktop_translations.sh  gitlog-to-changelog.sh  maintain_jobs.sh  makepot  tuncel_desktop2po.py
nautilus/: Makefile.am  tuncel-installsrc.desktop  tuncel-maininfo.desktop  tuncel-openHomepage.desktop  tuncel-unpack.desktop  tuncel-unpackto.desktop
nemo/: Makefile.am  tuncel-forceinstalltest.desktop  tuncel-forceinstalltest.nemo_action  tuncel-installsrc.desktop  tuncel-installsrc.nemo_action  tuncel-maininfo.desktop  tuncel-maininfo.nemo_action  tuncel-openHomepage.desktop  tuncel-openHomepage.nemo_action  tuncel-showcontents.desktop  tuncel-showcontents.nemo_action  tuncel-testinstall.desktop  tuncel-testinstall.nemo_action  tuncel-unpack.desktop  tuncel-unpack.nemo_action  tuncel-unpackto.desktop  tuncel-unpackto.nemo_action
nemo/po/: tuncel_desktop.pot
po/: LINGUAS  Makefile.am  POTFILES  de.po  el.po  es.po  fr.po  it.po  pl.po  pt_PT.po  ro.po  ru.po  sl.po  tr.po  tuncel.pot  uk.po
