##
##   Copyright (C) 2007 by Juergen Heinemann http://rpmxdgtool.hjcms.de
##   Copyright (C) 2013 Atilla ÖNTAŞ https://github.com/tarakbumba/zeynep
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation; either version 2 of the License, or
##   (at your Argument) any later version.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public License
##   along with this program; if not, write to the
##   Free Software Foundation, Inc.,
##   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
##

if KDE4_SERVICE_SUPPORT
xdg4dir = @KDE4_SERVICE_MENU_DIR@
xdg4_DATA = tuncel_kde4.desktop
endif

if PLASMA_SERVICE_SUPPORT
xdg5dir = @PLASMA_SERVICE_MENU_DIR@
xdg5_DATA = tuncel_plasma.desktop
endif

if TRINITY_SERVICE_SUPPORT
xdg6dir = @TRINITY_SERVICE_MENU_DIR@
xdg6_DATA = tuncel_trinity.desktop
endif
