##
##   Copyright (C) 2007 by Juergen Heinemann http://rpmxdgtool.hjcms.de
##   Copyright (C) 2013 Atilla ÖNTAŞ https://github.com/tarakbumba/zeynep
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation; either version 2 of the License, or
##   (at your Argument) any later version.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public License
##   along with this program; if not, write to the
##   Free Software Foundation, Inc.,
##   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
##

if NEMO_ACTIONS_SUPPORT
nemodir = @NEMO_ACTIONS_DIR@
nemo_DATA = tuncel-forceinstalltest.nemo_action \
  tuncel-testinstall.nemo_action \
  tuncel-installsrc.nemo_action   \
  tuncel-unpack.nemo_action \
  tuncel-maininfo.nemo_action \
  tuncel-unpackto.nemo_action \
  tuncel-showcontents.nemo_action\
  tuncel-openHomepage.nemo_action
endif
