##
##   Copyright (C) 2007 by Juergen Heinemann http://rpmxdgtool.hjcms.de
##   Copyright (C) 2013 Atilla ÖNTAŞ https://github.com/tarakbumba/zeynep
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License as published by
##   the Free Software Foundation; either version 2 of the License, or
##   (at your Argument) any later version.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public License
##   along with this program; if not, write to the
##   Free Software Foundation, Inc.,
##   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
##

if NEMO
xdg1dir = @NEMO_ACTIONS_DIR@
xdg1_DATA = tuncel-forceinstalltest.* \
  tuncel-testinstall.* \
  tuncel-installsrc.*   \
  tuncel-unpack.* \
  tuncel-maininfo.* \
  tuncel-unpackto.* \
  tuncel-showcontents.*\
  tuncel-openHomepage.*
endif
